# particle-life

./: Cargo.toml  LICENSE  README.md
src/: config.rs  game.rs  grid.rs  helpers.rs  main.rs  particle.rs  quadtree.rs  ui.rs
