[package]
name = "particle-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
core_affinity = "0.8.0"
macroquad = "0.3.25"
num_cpus = "1.14.0"
